Make it work without libraries

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html class="no-js" lang="de">
 
-<head>
+  <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>ISO 20022 XML Converter</title>
@@ -9,49 +9,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
     </style>
-    <script type='text/javascript' src='js/lib/xslt.js/xslt.js'></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <!--[if lte IE 9]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
     <![endif]-->
     <header>
-        <h1>ISO 20022 XML Converter</h1>
+      <h1>ISO 20022 XML Converter</h1>
     </header>
     <main>
     <input type="file" id="input">
     <div id='result' style="display:none;"></div>
     </main>
-  <script type="text/javascript">
+    <script type="text/javascript">
 
 var reader = new FileReader();
-  reader.onload = function(e) {
-    new Transformation()
-        .setXml(reader.result)
-        .setXslt('esr.xslt')
-        .setCallback(download)
-        .transform('result');
-  }
+reader.onload = function(e) {
+  transform(reader.result, 'esr.xslt', download);
+}
 
-function download(transformation) {
-    var a = window.document.createElement('a');
-    var result = document.getElementById("result").innerText;
-  console.log(result);
-    a.href = window.URL.createObjectURL(new Blob([result], {type: 'text/csv'}));
-    a.download = 'test.csv';
-    a.innerText = 'Download';
+function transform(xml_content, xslt_url, callback) {
+  xslt = new XMLHttpRequest();
+  xslt.onreadystatechange = function() {
+    if (xslt.readyState == 4) {
+      var xml = new DOMParser().parseFromString(xml_content, "text/xml");
+      var processor = new XSLTProcessor();
+      processor.importStylesheet(xslt.responseXML);
+      var  resultDoc = processor.transformToFragment(xml, document);
+      callback(resultDoc.textContent);
+    }
+  };
+  xslt.open("GET", xslt_url);
+  xslt.send(null);
+}
 
-    document.body.appendChild(a)
+function download(result) {
+  var a = window.document.createElement('a');
+  a.href = window.URL.createObjectURL(new Blob([result], {type: 'text/csv'}));
+  a.download = 'test.csv';
+  a.innerText = 'Download';
+  document.body.appendChild(a)
 }
 
 var inputElement = document.getElementById("input");
 inputElement.addEventListener("change", handleFiles, false);
 function handleFiles() {
-    var fileList = this.files;
-    reader.readAsText(fileList[0]);
+  reader.readAsText(this.files[0]);
 }
-  </script>
-</body>
+    </script>
+  </body>
 
 </html>
